# cross-compile-test

mylib/: config.h.in  meson.build  meson_options.txt  mylib.c
